INFRA-14412 Limit the list of concepts in the task description to 50